# KinfuSuperRes

./: .gitignore  CMakeLists.txt  README.md  SuperRes-NI-1-5  commonLibLocations.cmake
AMUtil/: CMakeLists.txt
AMUtil/include/: AMUtil2.h
AMUtil/src/: AMUtil2.cpp  amutil_main.cpp
BilateralFilteringCuda/: CMakeLists.txt
BilateralFilteringCuda/include/: AmCudaUtil.h  BilateralFilterCuda.hpp  GpuDepthMap.hpp  MyIntrinsics.h  ViewPointMapperCuda.h  ViewPointMapperCudaDefs.h  YangFiltering.h  calibration_cuda_constants_prism4.h
BilateralFilteringCuda/src/: AMCudaUtil.cu  AmCudaHelper.cuh  AmCudaUtil.cpp  AmCudaUtil.h  BilateralFilterCuda.cpp  BilateralFilterCuda.cu  BilateralFilterCuda.h  BilateralFilterCuda.hpp  CMakeCache.txt  GpuDepthMap.cu  GpuDepthMap.h  GpuDepthMap.hpp  GpuExecutionStream.h  GpuImage.cu  GpuImage.h  MyThrustUtil.cpp  MyThrustUtil.cu  MyThrustUtil.h  ViewPointMapperCuda.cpp  ViewPointMapperCuda.cu  ViewPointMapperCuda.h  YangFiltering.cpp  bilateralFilter.cpp  bilateralFilter_cpu.cpp  bilateral_kernel.cu  bmploader.cpp  calibration_cuda_constants_prism4.h  main.cpp
BilateralFilteringCuda/src/cuda/: AMCudaUtil.cu  BilateralFilterCuda.cu  GpuDepthMap.cu  ViewPointMapperCuda.cu  YangFiltering.cu
Calibration/: bak_testMapping.m  depr_testCalib.m  quick_blend.m  testBilat.m  testGuided.m  testMapping.m
Calibration/bilateralFilter/: bilateralFilter.m
Calibration/guidedFilter/: example_enhancement.m  example_enhancement.m~
Calibration/util/: DepthToWorld.m  RawDepthToMeters.m  WorldToColor.m  blend.m  blend.m~  myimshow.m  runPrintCalibrationHeader.m  toDisparity.m
MyKinfuApp/: CMakeLists.txt  localcfg.cmake
MyKinfuApp/src/: MyONIGrabber.h  main.cpp
MyKinfuApp/src/calibration/: CMakeLists.txt  calibration.cpp  calibration.h
MyKinfuApp/src/kinfu/: AMKinfuTracker.cpp  AMKinfuTracker.h  amImageGrabber.cpp  amImageGrabber.h  aron_notes  mainKinfuApp.cpp
MyKinfuApp/src/kinfu/tools/: evaluation.cpp  evaluation.h  image_view.cpp  image_view.h  kinfu_app.cpp  kinfu_app.cpp.autosave  kinfu_app.h  kinfu_pcl_headers.h  kinfu_util.cpp  kinfu_util.h  my_screenshot_manager.cpp  my_screenshot_manager.h  point_cloud_color_handler_rgb_cloud.hpp  scene_cloud_view.cpp  scene_cloud_view.h
MyKinfuApp/src/kinfu_large_scale/: CMakeLists.txt
MyKinfuApp/src/kinfu_large_scale/src/: kinfu.cpp
MyKinfuApp/src/kinfu_large_scale/tools/: kinfuLS_app.cpp
MyKinfuApp/src/myopenni/: MyOpenNIGrabber.cpp  MyOpenNIGrabber.h
MyKinfuApp/src/tsdf_vis/: CMakeLists.txt  main.cpp  my_pcd_viewer.cpp  my_pcd_viewer.h  tsdf_viewer.cpp  tsdf_viewer.h
MyKinfuApp/src/util/: MaUtil.cpp  MaUtil.h
MyKinfuTracker/: CMakeLists.txt
MyKinfuTracker/include/: kinfu.h  raycaster.h
MyKinfuTracker/src/: color_volume.cpp  internal.h  kinfu.cpp  marching_cubes.cpp  raycaster.cpp  tsdf_volume.cpp
MyKinfuTracker/src/cuda/: device.hpp  estimate_combined.cu  tsdf_volume.cu
SuperRes-NI-1-5/: .KinectNodesConfig.xml.swp  CMakeCache.txt  CMakeLists.txt  KinectNodesConfig.xml  Makefile  SuperRes-NI-1-5.cbp  SuperRes-NI-1-5.pro  cmake_install.cmake  localcfg.cmake  prism_camera_parameters.cpp
SuperRes-NI-1-5/src/: BilateralFiltering.cpp  BilateralFiltering.h  BilateralFilteringCuda.cpp  BilateralFilteringCuda.h  FreenectPlayer.cpp  FreenectPlayer.h  HomographyCalculator.cpp  HomographyCalculator.h  MaCvImageBroadcaster.cpp  MaCvImageBroadcaster.h  amCommon.h  main.cpp  prism_camera_parameters.cpp  prism_camera_parameters.h  yetAnotherRecorder.cpp
SuperRes-NI-1-5/src/io/: CMakeLists.txt  CvImageDumper.cpp  CvImageDumper.h  Recorder.cpp  Recorder.h  main.cpp
SuperRes-NI-1-5/src/util/: MaUtil.cpp  MaUtil.h
TriangleTracing/: CMakeLists.txt
TriangleTracing/include/: TriangleRenderer.h  math_3d.h  mesh.h  textfile.h
TriangleTracing/src/: TriangleRenderer.cpp  main.cpp  math_3d.cpp  mesh.cpp  textfile.cpp
TriangleTracing/src/shaders/: triangles.frag  triangles.vert
TriangleTracing2/: CMakeLists.txt
TriangleTracing2/include/: mesh.h  texture.h
Tsdf_vis/: CMakeLists.txt  bruteYang.sh  main.cpp  my_pcd_viewer.h  tsdf_viewer.cpp  tsdf_viewer.h
Tsdf_vis/include/: AmPclUtil.h  DepthViewer3D.h  MeshRayCaster.h  PolyMeshViewer.h  ProcessorWithIntrinsics.h  UpScaling.h  YangFilteringWrapper.h  tsdf_viewer.h  vtkCatmullClarkFilter.h
Tsdf_vis/src/: AmPclUtil.cpp  DepthViewer3D.cpp  MeshRayCaster.cpp  PolyMeshViewer.cpp  UpScaling.cpp  YangFilteringWrapper.cpp  tsdf_viewer.cpp  vtkCatmullClarkFilter.cpp
scripts/: CALLS  CALLS2  convertKeyboardRecToMesh.sh  convertScript.sh  customNiReg.sh  moveScript.sh  push2PrismThroughAmy.sh  runKinfu.sh  swapLibXnDevice_.sh  testConvertKeyboardRecToMesh.sh
src/: MyONIGrabber.cpp  MyONIGrabber.h  main.cpp
src/kinfu/tools/: .kinfu_app.cpp.swp  kinfu_app.cpp
src/util/: MaUtil.h  XnVUtil.h
thesis/: litrev.bib  mysystem.tex  sys_overview.dot  thesis.tex
thesis/img/: acerlit.22.ply  alhambranview.0.ply  ob.ply
